<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background_main"
    >

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="215dp"
        android:text="@string/title_activity_quiz"
        android:id="@+id/quiz_button"
        android:background="@drawable/quiz_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="215dp"
        android:text="@string/title_activity_flash"
        android:id="@+id/flash_button"
        android:background="@drawable/flash_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/quiz_button"
        android:layout_alignStart="@+id/quiz_button" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/tutorial_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showTutorial"
        android:background="@drawable/ic_help_black"/>
</RelativeLayout>
