<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.vcu.wes.myapplication.QuizActivity"
    android:background="@drawable/background">


        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/make_quiz"
            android:id="@+id/quiz_make"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/make_quiz_button"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/quiz_all"
            android:layout_alignStart="@+id/quiz_all" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:text="@string/all_quizzes"
            android:id="@+id/quiz_all"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/all_quiz_button"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/quiz_take"
            android:layout_alignStart="@+id/quiz_take" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_btn"
        android:background="@drawable/ic_help_black_24dp"
        android:onClick="showTutorial"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/take_quiz"
        android:id="@+id/quiz_take"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/take_quiz_button"
        android:layout_below="@+id/help_btn"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
