...
        android:layout_height="120dp"
        android:text="@string/submit_button"
        android:id="@+id/submit_button"
        android:background="@drawable/submit_button"
        android:layout_alignLeft="@+id/editTextCorrectAnswer"
        android:layout_alignStart="@+id/editTextCorrectAnswer"
        android:layout_alignTop="@+id/all_quizzes_button"
        android:layout_alignParentBottom="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/all_quizzes"
...
