...
                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ListView
                        android:id="@+id/listAll"
                        android:layout_width="match_parent"
                        android:layout_height="425dp"
                        android:background="@drawable/background_all" />
                </LinearLayout>

                <LinearLayout
...
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeButton"
        android:background="@drawable/ic_home_black"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </ImageButton>
</RelativeLayout>
...
