
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff33B5E5"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.vcu.wes.myapplication.TakeFlashcards"
        android:background="#ffE5F7FF"
        android:id="@+id/flash_activity_root">

    <RelativeLayout
        android:id="@+id/flash_activity_card_front"
        android:layout_width="300dp"
        android:layout_height="407dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_above="@+id/nextFlashButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Question Goes Here"
            android:id="@+id/flashQuestionText"
            android:gravity="center"
            android:includeFontPadding="false"
            android:layout_marginTop="175dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/flash_activity_card_back"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.vcu.wes.myapplication.TakeFlashcards">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/flashCardAnswerText"
            android:gravity="center_horizontal"
            android:paddingTop="175dp"
            android:includeFontPadding="false"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/nextFlashButton"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_marginBottom="81dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_answer"
        android:id="@+id/getAnswerButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
    
</RelativeLayout>
