<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.vcu.wes.myapplication.FlashResultsActivity"
    android:background="@drawable/background_inverted_all">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart_flash"
        android:id="@+id/restartFlashButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_manu_button"
        android:id="@+id/mainFlashButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/restartFlashButton"
        android:layout_alignStart="@+id/restartFlashButton"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/flash_done"
        android:id="@+id/textView"
        android:layout_above="@+id/restartFlashButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp" />
</RelativeLayout>
