...
    android:background="@drawable/background_inverted">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/take_flashcards"
        android:id="@+id/take_flashcard_button"
        android:background="@drawable/study_flash_button"
        android:layout_below="@+id/help_btn1"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/make_flashcards"
        android:id="@+id/make_flash_button"
        android:layout_below="@+id/take_flashcard_button"
        android:layout_alignLeft="@+id/take_flashcard_button"
        android:layout_alignStart="@+id/take_flashcard_button"
        android:background="@drawable/make_flash_button"/>

    <ImageButton
...
